# 14-Web-HW

./: .env.example  .gitignore  README.md  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
conf/: config.py  messages.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
entity/: models.py
htmlcov/: d_91bd6b0da247db3f_contacts_py.html  d_91bd6b0da247db3f_users_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_e2e_auth_py.html  d_a44f0ac069e85531_test_e2e_contacts_py.html  d_a44f0ac069e85531_test_e2e_users_py.html  d_a44f0ac069e85531_test_u_repository_contacts_py.html  d_de3833460954761d_auth_py.html  d_de3833460954761d_email_py.html  d_de3833460954761d_roles_py.html  d_f244bf8a352cf537_auth_py.html  d_f244bf8a352cf537_contacts_py.html  d_f244bf8a352cf537_users_py.html  index.html  status.json
migration/: env.py
migration/versions/: 1dd864cc59cb_avatar.py  4e809c44babc_init_with_auth_email_verify_limits_and_.py  97c0528144c9_avatar_3.py  9bd725460931_afatar_changed.py  d5d96bc34152_avatar_2.py
repository/: contacts.py  users.py
routes/: auth.py  contacts.py  users.py
schemas/: contacts.py  users.py
services/: auth.py  email.py  roles.py
services/templates/: email_verification.html
templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_u_repository_contacts.py  test_unit_repository_users.py
(+1 files in other folders)
