[tool.poetry]
name = "14-web-hw"
version = "0.1.0"
description = ""
authors = ["OleksiyM <OleksiyM@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
# psycopg2-binary = "^2.9.9"
# syncpg = "^1.1.2"
greenlet = "^3.0.3"
# email-validator = "^2.1.0.post1"
pydantic = { extras = ["email"], version = "^2.5.2" }
requests = "^2.31.0"
libgravatar = "^1.0.4"
# passlib = "^1.7.4"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.2"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.3"
cloudinary = "^1.39.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
